--- a/external_files/makefile_sim
+++ b/external_files/makefile_sim
@@ -81,7 +81,8 @@ DIR_VL_OBJ		:= vl_out
 
 # QUESTA/MODELSIM
 VLOG_SIM_DEFINE		:= +define+SIM_FILE_DIR=\"${DIR_SIM_MEM_FILES}\"
-VLOG_INC_DIR		:= +incdir+${DIR_SIM_MEM_FILES}
+VLOG_INC_DIR		:= +incdir+${DIR_SIM_MEM_FILES} \
+					   $(addprefix +incdir+,${DIR_LIST_RTL_INCL})
 VLOG_OPTS			:= +define+VERBOSITY=${SIM_VERBOSITY} 	\
 					   		${VLOG_SIM_DEFINE}				\
 							${VLOG_INC_DIR}
@@ -102,6 +103,7 @@ VL_OUT_LANG		:= -sc
 VL_IN_LANG		:= -sv
 # build exe and enable the maximum number of parallel jobs
 VL_ADD_OPTS		:= --build --exe -j
+VL_RTL_INCL		:= $(addprefix -I,${DIR_LIST_RTL_INCL})
 # additional cpp headers
 ifdef SRC_SIM_CPP_INCL
 VL_CPP_INCL		:= -CFLAGS "$(addprefix -I,${SRC_SIM_CPP_INCL})"
@@ -128,6 +130,7 @@ VL_OPTIONS		:= ${VL_WARNING} \
 
 VL_LINT_OPTIONS	:= ${VL_WARNING} \
 				   ${VL_IN_LANG} \
+				   ${VL_RTL_INCL} \
 				   ${VL_TOP_LINT} \
 				   --lint-only
 
