typo fix: call sim prepare target instead of sim compile

--- a/external_files/makefile_sim
+++ b/external_files/makefile_sim
@@ -322,7 +322,7 @@ ${SCRIPT_RUN_SIM}: ${SCRIPT_PREPARE_SIM}
 ${SCRIPT_PREPARE_SIM}:	\
 				${VSIM_LIB_WORK} ${PROJECT_TYPE}_${SIMULATOR}_compile ${FILE_PROJECT_CONFIG}
 	if [[ -f ${FILE_MAKE_PROJECT_TYPE} ]]; then \
-		make -f ${FILE_MAKE_PROJECT_TYPE} ${SIMULATOR}_compile; \
+		make -f ${FILE_MAKE_PROJECT_TYPE} ${SIMULATOR}_prepare; \
 	fi
 
 ${VSIM_LIB_WORK}:	${MAKE_DUMMY_SIM_RTL_COMP_SUCCESS} ${SRC_RTL_VLOG} \
